// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayUserCard should render a ClayUserCard with actionItems 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
      <div class="flex-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
              <title>ellipsis-v</title>
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#1">Edit</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#1">Save</a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with classes 1`] = `
<div class="card-type-asset card my-custom-class">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with href 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <a class=" card-title text-truncate" href="#1">User Name</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with id 1`] = `
<div class="card-type-asset card" id="myId">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with imageAlt 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with imageSrc 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay">
          <img alt="" class="sticker-img" src="thumbnail_coffee.jpg">
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with subtitle 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
        <div class="card-subtitle text-truncate" title="Author Action">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`danger color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-danger rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`dark color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-dark rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`info color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-info rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`light color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-light rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`primary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`secondary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-secondary rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`success color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-success rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user initials and style \`warning color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-warning rounded-circle sticker-xl">
        <span class="sticker-overlay">DOC</span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a disabled ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay"></span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="User Name">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selectable ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay"></span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="User Name">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selectable ClayUserCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay"></span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="User Name">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selectable ClayUserCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" value="checkbox" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay"></span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="User Name">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selected ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay"></span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="User Name">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render the default markup 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <span class="sticker-overlay"></span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;
